# AnimationEngineCPP

./: .clangd_not_used  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Notes.md  README.html  README.md  README.md.temp  cpp  dconfig  dconfig 2  myPlot.dem  vcpkg.json
.cache/clangd/index/: main.cpp.6E82E33E89EFB374.idx  vector2d.cpp.A6DFDF5B3BAECEC2.idx  vector2d.h.5B64F1C1D1E571C6.idx
cmake/: UpdateSubmodules.cmake
dependencies.old/sdl2_ttf/include/: SDL2
dependencies/sdl2/include/: SDL2
dependencies/sdl2_image/include/: SDL2
docs/: .pdf-view-restore  OOP_Details.md  about_building_the_project.md  cpp habits.md  cpp_habits.md  getting_sdl2.md  lifeTime.md  lldb_debuger_in_macOS_cli.md  string_premier_in_depth.md
docs/books/: data_structures_and_algorithms.md
docs/cmake_premier/: cmake_fundamentals.md
docs/cpp_fudamentals/: .pdf-view-restore  Friend_and_Virtual_CPP.md  Math_and_Statistics.md  build_types_static_dynamic_and_framework.md  casting_in_nutshell.md  constants_in_depth.md  cpp_data_structures.md  cpp_general_topics.md  cpp_habits.md  cpp_how_it_works.md  cpp_smart_pointer_problem.md  heap_and_stack.md  lifeTime.md  list_and_arrays.md  lldb_debuger_in_macOS_cli.md  lvalue_and_rvalue.md  maps_order_map_sets_others.md  moving_semantics.md  oop_details.md  operators.md  ownership_and_borrowing.md  passing_args_to_method_and_functions.md  pointers_and_references.md  smartPointers.md  string_premier_in_depth.md
docs/dev_Planning/: todo.md  working_plan.md
docs/dev_Planning/physcis_concepts/: general_principles.md
docs/html/: _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _friend__and___virtual___c_p_p_8md.html  _math__and___statistics_8md.html  _r_e_a_d_m_e_8md.html  _s_d_l2__framerate_8h.html  _s_d_l2__framerate_8h_source.html  _s_d_l2__gfx_primitives_8h.html  _s_d_l2__gfx_primitives_8h_source.html  _s_d_l2__image_filter_8h.html  _s_d_l2__image_filter_8h_source.html  _s_d_l2__rotozoom_8h.html  _s_d_l2__rotozoom_8h_source.html  _s_d_l_8h.html  _s_d_l_8h_source.html  _s_d_l__assert_8h.html  _s_d_l__assert_8h_source.html  _s_d_l__atomic_8h.html  _s_d_l__atomic_8h_source.html  _s_d_l__audio_8h.html  _s_d_l__audio_8h_source.html  _s_d_l__bits_8h.html  _s_d_l__bits_8h_source.html  _s_d_l__blendmode_8h.html  _s_d_l__blendmode_8h_source.html  _s_d_l__clipboard_8h.html  _s_d_l__clipboard_8h_source.html  _s_d_l__config_8h.html  _s_d_l__config_8h_source.html  _s_d_l__cpuinfo_8h.html  _s_d_l__cpuinfo_8h_source.html  _s_d_l__egl_8h.html  _s_d_l__egl_8h_source.html  _s_d_l__endian_8h.html  _s_d_l__endian_8h_source.html  _s_d_l__error_8h.html  _s_d_l__error_8h_source.html  _s_d_l__events_8h.html  _s_d_l__events_8h_source.html  _s_d_l__filesystem_8h.html  (+707 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  (+136 more)
docs/latex/: _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_c_x_x_compiler_id_8cpp_source.tex  _friend__and___virtual___c_p_p_8md.tex  _math__and___statistics_8md.tex  _s_d_l2__framerate_8h.tex  _s_d_l2__framerate_8h_source.tex  _s_d_l2__gfx_primitives_8h.tex  _s_d_l2__gfx_primitives_8h_source.tex  _s_d_l2__image_filter_8h.tex  _s_d_l2__image_filter_8h_source.tex  _s_d_l2__rotozoom_8h.tex  _s_d_l2__rotozoom_8h_source.tex  _s_d_l_8h.tex  _s_d_l_8h_source.tex  _s_d_l__assert_8h.tex  _s_d_l__assert_8h_source.tex  _s_d_l__atomic_8h.tex  _s_d_l__atomic_8h_source.tex  _s_d_l__audio_8h.tex  _s_d_l__audio_8h_source.tex  _s_d_l__bits_8h.tex  _s_d_l__bits_8h_source.tex  _s_d_l__blendmode_8h.tex  _s_d_l__blendmode_8h_source.tex  _s_d_l__clipboard_8h.tex  _s_d_l__clipboard_8h_source.tex  _s_d_l__config_8h.tex  _s_d_l__config_8h_source.tex  _s_d_l__cpuinfo_8h.tex  _s_d_l__cpuinfo_8h_source.tex  _s_d_l__egl_8h.tex  _s_d_l__egl_8h_source.tex  _s_d_l__endian_8h.tex  _s_d_l__endian_8h_source.tex  _s_d_l__error_8h.tex  _s_d_l__error_8h_source.tex  _s_d_l__events_8h.tex  _s_d_l__events_8h_source.tex  _s_d_l__filesystem_8h.tex  _s_d_l__filesystem_8h_source.tex  (+452 more)
docs/make_and_cmake_premier/: make_fundamental.md
docs/own_docs/: logging_info.md  todo.md
docs/own_docs/books/: .pdf-view-restore
docs/own_docs/coding_formatting_style/: README.md  doxygen.md
docs/own_docs/cpp_fudamentals/: .#lifeTime.md  Friend_and_Virtual_CPP.md  Math_and_Statistics.md  build_types.md  build_types_static_dynamic_and_framework.md  byte_and_bits.md  constants_in_depth.md  cpp_data_structures.md  cpp_features_modules.md  cpp_memeory_leaking.md  cpp_smart_pointer_problem.md  cpp_std++20_module.md  cpp_std20_module.md  cpp_user_input.md  cpp_vs_rust.md  data_types.md  env_load_variable.md  header_files.md  io_details.md  lifeTime.md  list_and_arrays.md  runtime_vs_complietime.md  smartPointers.md  string_premier_in_depth.md
docs/own_docs/dev_Planning/: todo.md  working_plan.md
docs/own_docs/doxygen/: d1_doxygen.md  d2_doxygen_theme.md  d3_export_manual.md
docs/own_docs/git_and_github/: git_workflow.md
docs/own_docs/unit_test/: GTest_Fundamentals.md  (+2 more)
docs/sdl2_Fundamentals/: sdl2_premier 2.md  sdl2_run_on_gpu.md
docs/vcpkg_premier/: vcpkg_fundamentals.md  vcpkg_how_it_works 3.md
src/: CMakeLists.txt  main.cpp  test.cpp
src/lib/veclib/: Vector_2d.cpp  Vector_2d.h  vector2d.cpp  vector2d.h
src/lib/veclib/include/: vector2d 2.h
src/lib/veclib/lib/: vect 2.cpp  vect.cpp  vector2d 2.cpp  vector2d.cpp
src/logs/: main.GMacBookPro.local.gmbp.log.INFO.20231022-213046.33518  main.GMacBookPro.local.gmbp.log.INFO.20231022-213327.33898  main.GMacBookPro.local.gmbp.log.INFO.20231022-213405.34417  main.INFO
tests/: CMakeLists.txt  my_test.cpp  my_test1.cpp  my_test2.cpp
tools/: fetch_dependencies_if_not_existed_macOS 2.sh  fetch_dependencies_if_not_existed_macOS.sh
(+5 files in other folders)
